adding css and javascript file

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 doctype 5
-html(manifest='cache.manifest')
+html
   head
     title= title
+    link(rel='stylesheet', href='/css/style.css')
+    script(src='/javascript/trelloFlash.js') 
   body
     #wrap Hello World
