adding search text box

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,4 +5,7 @@ html
     link(rel='stylesheet', href='/css/style.css')
     script(src='/javascript/trelloFlash.js') 
   body
-    #wrap Hello World
+    #wrap
+        #content
+    input(type='text', name = 'newWord', id='keywordTextBox', autocomplete = "off", placeholder ='Search')
+        #results
