--- a/views/index.jade
+++ b/views/index.jade
@@ -3,9 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/css/style.css')
-    script(src='/javascript/trelloFlash.js') 
   body
     #wrap
         #content
     input(type='text', name = 'newWord', id='keywordTextBox', autocomplete = "off", placeholder ='Search')
         #results
+    script(src='/javascript/trelloFlash.js')
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
