--- a/views/index.jade
+++ b/views/index.jade
@@ -10,3 +10,4 @@ html
         #results
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/javascript/trelloFlash.js')
+    script(src='https://api.trello.com/1/client.js?key=' + trello_app_key)
