--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
     #wrap
         #content
     input(type='text', name = 'newWord', id='keywordTextBox', autocomplete = "off", placeholder ='Search')
-        #results
+    button(id="authorize")  Authorize Trello Account
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
     script(src='/javascript/trelloFlash.js')
     script(src='https://api.trello.com/1/client.js?key=' + trello_app_key)
